# app/routers/auth.router.js
@@ -15,6 +15,23 @@ router.route('/login')
   .post(authController.login);
 
 router.route('/register')
+  /**
+   * @summary Register a new user
+   * @tags auth
+   * @param {RegisterDto} request.body.required - User info
+   * @return {object} 201 - User successfully registered
+   * @return {Error}  400 - Bad request
+   * @return {Error}  409 - User already exists
+   * @return {Error}  500 - Internal server error
+   * @security JWT
+   * @example request - Register a new user
+   * {
+   *  "username": "John",
+   *  "email": "email@email.com"
+   *  "password": "motdepasse"
+   * }
+   *
+   */
   .post(authController.register);
 
 export default router;
